results/SpecGenBench/2-shot/log-MinInArray-2023_11_28_11_35_50.txt
class MinInArray {
    //@ requires arr != null;
    //@ requires arr.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; arr[i] >= \result);
    //@ ensures (\exists int i; 0 <= i && i < arr.length; arr[i] == \result);
    //@ ensures \result == -1 ==> (\forall int i; 0 <= i && i < arr.length; arr[i] == Integer.MIN_VALUE);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:10: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                     ^
/home/max/Documents/JMLGPT/tmp/MinInArray.java:10: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                                      ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:10: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; a[i] >= res);
                                                                ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:11: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
                                     ^
/home/max/Documents/JMLGPT/tmp/MinInArray.java:11: error: cannot find symbol
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
                                                      ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:11: error: cannot find symbol
        //@ maintaining (\exists int i; 0 <= i && i < a.length; a[i] == res);
                                                                ^
  symbol:   variable a
  location: class MinInArray
6 errors

